# mastermind

./: .gitignore  README.md  hie.yaml  mastermind.cabal
.github/workflows/: haskell.yml
app/: Main.hs  Random.hs  Statistics.hs
src/: Mastermind.hs  Solve.hs
test/: Spec.hs
