cabal-version:      3.4
name:               mastermind
version:            0.1.0.0
synopsis:

library
    exposed-modules:  Mastermind
                      Solve

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable mastermind
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Random
                      Statistics

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      random,
                      mastermind

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite mastermind-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base,
                      hspec,
                      mastermind
